remove unused buildversion stuff

--- a/.github/workflows/build-varda-rekisterointi.yml
+++ b/.github/workflows/build-varda-rekisterointi.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: ./varda-rekisterointi
-        run: mvn clean install -B -Dbranch=$GITHUB_REF_NAME -Drevision=$GITHUB_SHA -DbuildNumber=$GITHUB_RUN_NUMBER/$GITHUB_RUN_ATTEMPT
+        run: mvn clean install -B
       - name: Upload varda-rekisterointi-jar
         uses: actions/upload-artifact@v4
         with:
