--- a/.github/workflows/build-organisaatio-service.yml
+++ b/.github/workflows/build-organisaatio-service.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           sudo timedatectl set-timezone Europe/Helsinki
           echo "Europe/Helsinki" | sudo tee /etc/timezone
-          mvn clean install -B -Dbranch=$GITHUB_REF_NAME -Drevision=$GITHUB_SHA -DbuildNumber=$GITHUB_RUN_NUMBER/$GITHUB_RUN_ATTEMPT
+          mvn clean install -B -Dbranch=$GITHUB_REF_NAME
       - uses: actions/upload-artifact@v4
         with:
           name: organisaatio-service-jar
