--- a/.github/workflows/build-rekisterointi.yml
+++ b/.github/workflows/build-rekisterointi.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: rekisterointi
-        run: mvn clean package -B -Dbranch=$GITHUB_REF_NAME -Drevision=$GITHUB_SHA -DbuildNumber=$GITHUB_RUN_NUMBER/$GITHUB_RUN_ATTEMPT
+        run: mvn clean package -B
       - name: Upload rekisterointi-jar
         uses: actions/upload-artifact@v4
         with:
