OPHYK-678 Use new direct domains to Oppijanumerorekisteri for API requests

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -61,6 +61,7 @@ organisaatio.service.password=xxx
 viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
 viestinvalitys.uiurl=https://viestinvalitys.hahtuvaopintopolku.fi/raportointi
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
+oppijanumerorekisteri.baseurl: http://localhost:${server.port}/organisaatio-service/mock/oppijanumerorekisteri-service
 
 oiva.baseurl=http://localhost:${server.port}/organisaatio-service/mock/oiva
 oiva.username=oivausername
@@ -84,6 +85,10 @@ feature.mockapi=true
 otuva.jwt.issuer-uri=http://localhost:${server.port}/organisaatio-service/mock/kayttooikeus-service
 organisaatio.palvelukayttaja.client_id=organisaatio
 organisaatio.palvelukayttaja.client_secret=foobar
+
+#otuva.jwt.issuer-uri=https://kayttooikeus.hahtuva.yleiskayttoiset.opintopolku.fi/kayttooikeus-service
+#organisaatio.palvelukayttaja.client_id=Organisaatio
+#organisaatio.palvelukayttaja.client_secret=ZCnSAPMhTNo2jpcPPh9IFAeBCeTvcM1C
 
 organisaatio.tasks.export.enabled=false
 organisaatio.tasks.export.bucket-name=none
