--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -50,6 +50,7 @@ organisaatio.service.password=password
 viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
 viestinvalitys.uiurl=https://viestinvalitys.hahtuvaopintopolku.fi/raportointi
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
+oppijanumerorekisteri.baseurl: http://localhost:${server.port}/organisaatio-service/mock/oppijanumerorekisteri
 
 oiva.baseurl=http://localhost:${server.port}/organisaatio-service/mock/oiva
 oiva.username=oivausername
