--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -61,6 +61,7 @@ organisaatio.service.password=xxx
 viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
 viestinvalitys.uiurl=https://viestinvalitys.hahtuvaopintopolku.fi/raportointi
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
+oppijanumerorekisteri.baseurl: http://localhost:${server.port}/organisaatio-service/mock/oppijanumerorekisteri-service
 
 oiva.baseurl=http://localhost:${server.port}/organisaatio-service/mock/oiva
 oiva.username=oivausername
