--- a/infra/package.json
+++ b/infra/package.json
@@ -6,6 +6,7 @@
     "aws-cdk": "^2.166.0",
     "aws-cdk-lib": "^2.167.1",
     "constructs": "^10.4.2",
+    "prettier": "3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
