--- a/.github/workflows/build-and-test-artifacts.yml
+++ b/.github/workflows/build-and-test-artifacts.yml
@@ -28,6 +28,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   run-java-tests:
     runs-on: ubuntu-latest
+    env:
+      TZ: Europe/Helsinki
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v5
