--- a/organisaatio-service/src/main/resources/config/qa.yml
+++ b/organisaatio-service/src/main/resources/config/qa.yml
@@ -1,6 +1,7 @@
 spring.flyway.locations: classpath:db/migration,classpath:db/migration-test
-spring.security.oauth2.resourceserver.jwt.issuer-uri: https://kayttooikeus.qa.yleiskayttoiset.opintopolku.fi/kayttooikeus-service
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://kayttooikeus.qa.yleiskayttoiset.opintopolku.fi/kayttooikeus-service/oauth2/jwks
+#spring.security.oauth2.resourceserver.jwt.issuer-uri: https://kayttooikeus.qa.yleiskayttoiset.opintopolku.fi/kayttooikeus-service
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://kayttooikeus.qa.yleiskayttoiset.opintopolku.fi/kayttooikeus-service/oauth2/jwks
+organisaatio.jwt-issuers: https://kayttooikeus.qa.yleiskayttoiset.opintopolku.fi/kayttooikeus-service,https://qa.otuva.opintopolku.fi/kayttooikeus-service
 host.cas: "virkailija.testiopintopolku.fi"
 host.ilb: "https://virkailija.testiopintopolku.fi"
 host.virkailija: "virkailija.testiopintopolku.fi"
