Revert "OPHYK-679 temporarily add resource server multitenancy support for the new otuva issuer uri"
This reverts commit e75b6c12145af98a8a2d2d341b67aeefbeb4f3bc.

--- a/organisaatio-service/src/main/resources/config/hahtuva.yml
+++ b/organisaatio-service/src/main/resources/config/hahtuva.yml
@@ -1,7 +1,6 @@
 spring.flyway.locations: classpath:db/migration,classpath:db/migration-test
-#spring.security.oauth2.resourceserver.jwt.issuer-uri: https://kayttooikeus.hahtuva.yleiskayttoiset.opintopolku.fi/kayttooikeus-service
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://kayttooikeus.hahtuva.yleiskayttoiset.opintopolku.fi/kayttooikeus-service/oauth2/jwks
-organisaatio.jwt-issuers: https://kayttooikeus.hahtuva.yleiskayttoiset.opintopolku.fi/kayttooikeus-service,https://hahtuva.otuva.opintopolku.fi/kayttooikeus-service
+spring.security.oauth2.resourceserver.jwt.issuer-uri: https://hahtuva.otuva.opintopolku.fi/kayttooikeus-service
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://hahtuva.otuva.opintopolku.fi/kayttooikeus-service/oauth2/jwks
 host.cas: "virkailija.hahtuvaopintopolku.fi"
 host.ilb: "https://virkailija.hahtuvaopintopolku.fi"
 host.virkailija: "virkailija.hahtuvaopintopolku.fi"
