--- a/organisaatio-service/src/main/resources/config/dev.yml
+++ b/organisaatio-service/src/main/resources/config/dev.yml
@@ -1,7 +1,6 @@
 spring.flyway.locations: classpath:db/migration,classpath:db/migration-test
-#spring.security.oauth2.resourceserver.jwt.issuer-uri: https://kayttooikeus.dev.yleiskayttoiset.opintopolku.fi/kayttooikeus-service
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://kayttooikeus.dev.yleiskayttoiset.opintopolku.fi/kayttooikeus-service/oauth2/jwks
-organisaatio.jwt-issuers: https://kayttooikeus.dev.yleiskayttoiset.opintopolku.fi/kayttooikeus-service,https://dev.otuva.opintopolku.fi/kayttooikeus-service
+spring.security.oauth2.resourceserver.jwt.issuer-uri: https://dev.otuva.opintopolku.fi/kayttooikeus-service
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://dev.otuva.opintopolku.fi/kayttooikeus-service/oauth2/jwks
 
 host.cas: "virkailija.untuvaopintopolku.fi"
 host.ilb: "https://virkailija.untuvaopintopolku.fi"
