OPHYK-177 add missing test props to initialize Oauth2 resource server in tests

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -94,6 +94,8 @@ spring.flyway.locations=classpath:db/migration
 spring.freemarker.template-loader-path=classpath:templates/
 spring.datasource.hikari.maximumPoolSize=5
 spring.messages.basename=Messages
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost/issuer-uri
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost/jwk-set-uri
 
 host.virkailija=virkailija.foo.fi
 url-virkailija=https://${host.virkailija}
