OPHYK-697 Replace querydsl with fork to get access to security updates
Querydsl maintenance has slowed down to a point where the community
has forked the project under OpenFeign

Spring Data supports the fork on a best-effort basis.

https://docs.spring.io/spring-data/jpa/reference/repositories/core-extensions.html#core.extensions.querydsl

--- a/organisaatio-service/pom.xml
+++ b/organisaatio-service/pom.xml
@@ -12,6 +12,9 @@
 
     <artifactId>organisaatio-service</artifactId>
     <packaging>jar</packaging>
+    <properties>
+        <querydslVersion>5.1</querydslVersion>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -177,16 +180,16 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.querydsl</groupId>
+            <groupId>io.github.openfeign.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
             <classifier>jakarta</classifier>
-            <version>${querydsl.version}</version>
+            <version>${querydslVersion}</version>
         </dependency>
         <dependency>
-            <groupId>com.querydsl</groupId>
+            <groupId>io.github.openfeign.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <classifier>jakarta</classifier>
-            <version>${querydsl.version}</version>
+            <version>${querydslVersion}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
