OPHYK-938 upgrade nodejs to 24, nvm.sh to latest, and build images to latest

--- a/rekisterointi/Dockerfile
+++ b/rekisterointi/Dockerfile
@@ -1,10 +1,10 @@
-FROM maven:3.9.8-amazoncorretto-21-al2023 AS build
+FROM maven:3.9.11-amazoncorretto-21-al2023@sha256:b0e00d2581674e0c12392bb88075a2835e73af86af48bbdb8eeec3d2e993ea40 AS build
 WORKDIR /app
 
-RUN dnf install -y nodejs20 \
-  && alternatives --install /usr/bin/node node /usr/bin/node-20 90 \
-  && alternatives --install /usr/bin/npm npm /usr/bin/npm-20 90 \
-  && alternatives --install /usr/bin/npx npx /usr/bin/npx-20 90
+RUN dnf install -y nodejs24 \
+  && alternatives --install /usr/bin/node node /usr/bin/node-24 90 \
+  && alternatives --install /usr/bin/npm npm /usr/bin/npm-24 90 \
+  && alternatives --install /usr/bin/npx npx /usr/bin/npx-24 90
 
 COPY . .
 
@@ -15,7 +15,7 @@ RUN npm run build
 WORKDIR /app
 RUN mvn clean package -s settings.xml -DskipTests
 
-FROM amazoncorretto:21
+FROM amazoncorretto:21.0.9@sha256:c26e10ed8cf8300aacc0952a4869ed64e14d47d2cfdb24235b891233e4c5385c
 WORKDIR /app
 
 COPY --from=build /app/target/rekisterointi.jar rekisterointi.jar
