--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -39,7 +39,7 @@
     },
     "devDependencies": {
         "@types/joi-phone-number": "^5.0.6",
-        "@types/node": "^20.12.11",
+        "@types/node": "24.10.3",
         "@types/react": "^17.0.2",
         "@types/react-datepicker": "2.11.1",
         "@types/react-dom": "^17.0.11",
@@ -124,8 +124,7 @@
         "enabled": false
     },
     "engines": {
-        "npm": "^10",
-        "node": "^20"
+        "node": "^24"
     },
     "overrides": {
         "@opetushallitus/virkailija-ui-components": {
