--- a/playwright/package.json
+++ b/playwright/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "@playwright/test": "^1.50.0",
-    "@types/node": "^20.12.7",
+    "@types/node": "24.10.3",
     "finnish-business-ids": "^3.1.1",
     "moment": "^2.30.1",
     "xlsx": "^0.18.5"
