--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -29,7 +29,7 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.17.1",
-        "@types/node": "^20.12.11",
+        "@types/node": "24.10.3",
         "@types/react": "^16.14.60",
         "@types/react-beforeunload": "^2.1.5",
         "@types/react-datepicker": "2.9.5",
