--- a/infra/package.json
+++ b/infra/package.json
@@ -8,6 +8,6 @@
     "constructs": "^10.4.2",
     "prettier": "3.6.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "5.9.3"
   }
 }
