--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -65,7 +65,7 @@
         "style-loader": "^4.0.0",
         "ts-loader": "^9.4.2",
         "tsx": "^4.19.3",
-        "typescript": "5.3.*",
+        "typescript": "5.9.3",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.0.4",
