--- a/rekisterointi/rekisterointi-ui/package.json
+++ b/rekisterointi/rekisterointi-ui/package.json
@@ -38,7 +38,7 @@
         "prettier": "^2.8.7",
         "style-loader": "^3.3.2",
         "ts-loader": "^9.4.2",
-        "typescript": "^5.0.4",
+        "typescript": "5.9.3",
         "webpack": "^5.96.1",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^5.2.2"
