--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -55,8 +55,8 @@
         "source-map-loader": "^5.0.0",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.4.2",
-        "tsx": "^4.19.3",
-        "typescript": "^4.9.5",
+        "tsx": "4.21.0",
+        "typescript": "5.9.3",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.0.4",
