--- a/rekisterointi/pom.xml
+++ b/rekisterointi/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.7</version>
+		<version>3.4.12</version>
 		<relativePath/>
 	</parent>
 	<groupId>fi.vm.sade</groupId>
@@ -51,12 +51,13 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
+			<version>1.18.42</version>
+			<scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>ch.qos.logback.access</groupId>
             <artifactId>logback-access-tomcat</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.7</version>
         </dependency>
 		<dependency>
 			<groupId>fi.vm.sade.java-utils</groupId>
