--- a/rekisterointi/rekisterointi-ui/package.json
+++ b/rekisterointi/rekisterointi-ui/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@hookform/resolvers": "^3.1.0",
+        "@hookform/resolvers": "3.10.0",
         "@reduxjs/toolkit": "^1.9.5",
         "axios": "^1.7.4",
         "date-fns": "^2.29.2",
@@ -24,8 +24,8 @@
         "yup": "^1.1.1"
     },
     "devDependencies": {
-        "@axe-core/playwright": "4.6.1",
-        "@playwright/test": "1.50.0",
+        "@axe-core/playwright": "4.11.0",
+        "@playwright/test": "1.57.0",
         "@types/react": "18.0.37",
         "@types/react-datepicker": "4.10.0",
         "@types/react-dom": "18.0.11",
@@ -33,14 +33,14 @@
         "copy-webpack-plugin": "11.0.0",
         "css-loader": "6.7.3",
         "fork-ts-checker-webpack-plugin": "8.0.0",
-        "html-webpack-plugin": "5.5.1",
+        "html-webpack-plugin": "5.6.5",
         "playwright-chromium": "1.32.3",
         "prettier": "2.8.7",
         "style-loader": "3.3.2",
-        "ts-loader": "9.4.2",
+        "ts-loader": "9.5.4",
         "typescript": "5.9.3",
-        "webpack": "5.96.1",
-        "webpack-cli": "5.0.1",
+        "webpack": "5.104.0",
+        "webpack-cli": "6.0.1",
         "webpack-dev-server": "5.2.2"
     },
     "scripts": {
