--- a/rekisterointi/rekisterointi-ui/package.json
+++ b/rekisterointi/rekisterointi-ui/package.json
@@ -9,16 +9,16 @@
         "date-fns": "^2.29.2",
         "normalize.css": "^8.0.1",
         "oph-virkailija-style-guide": "github:Opetushallitus/virkailija-styles#master",
-        "react": "^18.2.0",
+        "react": "18.3.1",
         "react-datepicker": "^4.11.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "18.3.1",
         "react-helmet": "^6.1.0",
         "react-hook-form": "^7.43.9",
         "react-markdown": "^8.0.7",
         "react-redux": "^8.0.5",
         "react-router": "^6.10.0",
         "react-router-dom": "^6.10.0",
-        "react-select": "^5.7.2",
+        "react-select": "5.10.2",
         "redux": "^4.2.1",
         "universal-cookie": "^7.2.2",
         "yup": "^1.1.1"
@@ -26,9 +26,9 @@
     "devDependencies": {
         "@axe-core/playwright": "4.11.0",
         "@playwright/test": "1.57.0",
-        "@types/react": "18.0.37",
+        "@types/react": "18.3.27",
         "@types/react-datepicker": "4.10.0",
-        "@types/react-dom": "18.0.11",
+        "@types/react-dom": "18.3.7",
         "@types/react-helmet": "6.1.11",
         "copy-webpack-plugin": "11.0.0",
         "css-loader": "6.7.4",
