--- a/infra/package.json
+++ b/infra/package.json
@@ -3,11 +3,11 @@
     "@aws-sdk/client-iam": "^3.691.0",
     "@aws-sdk/client-sts": "^3.693.0",
     "@types/node": "24.10.4",
-    "aws-cdk": "^2.166.0",
-    "aws-cdk-lib": "^2.167.1",
-    "constructs": "^10.4.2",
-    "prettier": "3.6.2",
-    "ts-node": "^10.9.2",
+    "aws-cdk": "2.1005.0",
+    "aws-cdk-lib": "2.189.1",
+    "constructs": "10.4.4",
+    "prettier": "3.7.4",
+    "ts-node": "10.9.2",
     "typescript": "5.9.3"
   }
 }
